--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "backend server with node, express and ES6",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon --exec babel-node server.js",
-    "debug": "nodemon --exec babel-node --inspect server.js"
+    "build": "babel src -d dist --source-maps",
+    "start": "node dist/server.js",
+    "build-start": "npm run build && npm run start"
   },
   "author": "André Ximenes",
   "license": "ISC",
@@ -14,8 +15,6 @@
     "url": "https://github.com/andreximenes/node-server-es6"
   },
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
@@ -23,8 +22,14 @@
     "moment": "^2.23.0",
     "sequelize": "^4.42.0"
   },
-  
   "devDependencies": {
+    "axios": "^0.18.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "browserify": "^16.2.3",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "nock": "^10.0.6",
     "nodemon": "^1.18.9",
     "sequelize-cli": "^5.4.0"
   }
