--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "babel src -d dist --source-maps",
     "start": "node dist/server.js",
-    "build-start": "npm run build && npm run start"
+    "build-start": "npm run build && npm run start",
+    "test": "mocha"
   },
   "author": "André Ximenes",
   "license": "ISC",
@@ -15,19 +16,20 @@
     "url": "https://github.com/andreximenes/node-server-es6"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "loadsh": "^0.0.3",
     "moment": "^2.23.0",
-    "sequelize": "^4.42.0"
+    "sequelize": "^4.42.0",
+    "sqlite3": "^4.0.6"
   },
   "devDependencies": {
-    "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "browserify": "^16.2.3",
     "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
     "mocha": "^5.2.0",
     "nock": "^10.0.6",
     "nodemon": "^1.18.9",
