--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "backend server with node, express and ES6",
   "main": "server.js",
   "scripts": {
-    "build": "babel src -d dist --source-maps",
-    "start": "node dist/server.js",
-    "build-start": "npm run build && npm run start",
-    "test": "mocha"
+    "start": "nodemon --exec babel-node src/server.js",
+    "test": "mocha",
+    "old-build": "babel src -d dist --source-maps",
+    "old- start": "npm run build && node dist/server.js"
   },
   "author": "André Ximenes",
   "license": "ISC",
@@ -20,19 +20,18 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "helmet": "^3.15.0",
     "loadsh": "^0.0.3",
     "moment": "^2.23.0",
-    "sequelize": "^4.42.0",
-    "sqlite3": "^4.0.6"
+    "mongodb": "^3.1.12",
+    "morgan": "^1.9.1",
+    "sqlite3": "^4.0.6",
+    "tap-spec": "^5.0.0",
+    "tape": "^4.9.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "chai": "^4.2.0",
-    "chai-http": "^4.2.1",
-    "mocha": "^5.2.0",
-    "nock": "^10.0.6",
-    "nodemon": "^1.18.9",
-    "sequelize-cli": "^5.4.0"
+    "nodemon": "^1.18.9"
   }
 }
