--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "backend server with node, express and ES6",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon --exec babel-node src/server.js",
-    "test": "mocha",
-    "old-build": "babel src -d dist --source-maps",
-    "old- start": "npm run build && node dist/server.js"
+    "start": "node src/server.js",
+    "test": "mocha src/test/**/*.js"
   },
   "author": "André Ximenes",
   "license": "ISC",
@@ -16,22 +14,27 @@
     "url": "https://github.com/andreximenes/node-server-es6"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
+    "jsonwebtoken": "^8.4.0",
     "loadsh": "^0.0.3",
     "moment": "^2.23.0",
     "mongodb": "^3.1.12",
-    "morgan": "^1.9.1",
-    "sqlite3": "^4.0.6",
-    "tap-spec": "^5.0.0",
-    "tape": "^4.9.2"
+    "mongoose": "^5.4.5",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "nodemon": "^1.18.9"
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.9",
+    "supertest": "^3.4.1",
+    "tap-spec": "^5.0.0",
+    "tape": "^4.9.2"
   }
 }
