--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "backend server with node, express and ES6",
   "main": "server.js",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "nodemon src/server.js",
+    "debug": "nodemon --inspect src/server.js",
     "test": "mocha src/test/**/*.js"
   },
   "author": "André Ximenes",
